Some designs changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="generic_error">Generic error</string>
     <string name="internet_connection_error">Internet connection error</string>
 
+    <string name="discover">Descubrir</string>
     <string name="synopsis">Sipnosis</string>
     <string name="rate_format">%1$s/10</string>
 
