--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="generic_error">Generic error</string>
     <string name="internet_connection_error">Internet connection error</string>
 
-    <string name="discover">Descubrir</string>
-    <string name="synopsis">Sipnosis</string>
+    <string name="discover">Discover</string>
+    <string name="synopsis">Synopsis</string>
     <string name="rate_format">%1$s/10</string>
 
 </resources>
